--- a/code/theme/default/bo/font.css
+++ b/code/theme/default/bo/font.css
@@ -1,3 +1,4 @@
+/*
 @font-face {
 	font-family: 'Droid Sans';
 	font-style: normal;
@@ -20,4 +21,11 @@
 	font-weight: normal;
 	font-style: normal;
 	-webkit-font-smoothing: antialiased;
+}
+*/
+@font-face {
+	font-family: 'Montserrat', sans-serif;
+}
+@font-face {
+	font-family: 'Open Sans', sans-serif;
 }
