--- a/code/theme/default/fo/font.css
+++ b/code/theme/default/fo/font.css
@@ -1,6 +1,14 @@
+/*
 @font-face {
   font-family: 'Droid Sans';
   font-style: normal;
   font-weight: 400;
   src: local('Droid Sans'), local('DroidSans'), url(font/droidsans.woff) format('woff');
+}
+*/
+@font-face {
+	font-family: 'Montserrat', sans-serif;
+}
+@font-face {
+	font-family: 'Open Sans', sans-serif;
 }
