--- a/code/theme/default/none/style.css
+++ b/code/theme/default/none/style.css
@@ -3,6 +3,7 @@ html{
 	min-height: 100%;
 }
 body{
+	font-family: Open Sans !important, Arial;
 	padding-top: 120px;
 	margin-bottom: 55px;
 }
@@ -15,7 +16,7 @@ body{
 	width: 100%;
 
 	height: 55px;
-	background-color: #004883;
+	background-color: #007696;
 	color: #ffffff;
 	padding: 12px;
 	font-size: 12px;
@@ -43,13 +44,13 @@ body{
 	margin-right: 12px;
 }
 .navbar-default{
-	background-color: #004883;
+	background-color: #007696;
 	border: 0;
 }
 .navbar-default .navbar-nav > li > a, .navbar-default .navbar-brand{
 	color: #ffffff;
 	cursor: pointer;
-	font-family: DIN-Medium;
+	font-family: Montserrat;
 }
 .navbar-default .navbar-brand:hover{
 	background-color: #00adef;
@@ -158,7 +159,7 @@ textarea{
 	font-size: 12px;
 }
 .bootstrap-dialog.type-primary .modal-header{
-	background-color: #004883;
+	background-color: #007696;
 }
 .bootstrap-dialog-button-icon glyphicon{
 	top: 0;
