--- a/code/core/plugins/bootstrap/bootstrap.css
+++ b/code/core/plugins/bootstrap/bootstrap.css
@@ -15,7 +15,7 @@
  */
 
 .aa-bs {
-   font-family: Droid Sans,Arial; 
+   font-family: 'Open Sans', sans-serif;
   /*! normalize.css v3.0.0 | MIT License | git.io/normalize */
 }
 .aa-bs html {
