--- a/code/theme/default/fo/font.css
+++ b/code/theme/default/fo/font.css
@@ -1,14 +1,15 @@
-/*
+/* Use For Title */
 @font-face {
-  font-family: 'Droid Sans';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Droid Sans'), local('DroidSans'), url(font/droidsans.woff) format('woff');
+	font-family: 'Montserrat Light', sans-serif;
+	src: local('☺'), url('font/Montserrat-Light.ttf') format('truetype');
 }
-*/
+/* Use For Headings */
 @font-face {
 	font-family: 'Montserrat', sans-serif;
+	src: local('☺'), url('font/Montserrat-Regular.ttf') format('truetype');
 }
+/* Use For Body */
 @font-face {
 	font-family: 'Open Sans', sans-serif;
+	src: local('☺'), url('font/OpenSans-Regular.ttf') format('truetype');
 }
